//package webapp.users.signup
//
//data class KeyAndPassword(
//    val key: String? = null,
//    val newPassword: String? = null
//)